<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item
		android:id="@+id/wallet_options_address_book"
		android:showAsAction="never"
		android:title="@string/address_book_activity_title"/>
	<item
		android:id="@+id/wallet_options_exchange_rates"
		android:showAsAction="never"
		android:title="@string/exchange_rates_activity_title"/>
	<item
		android:showAsAction="never"
		android:title="@string/wallet_options_backup">
		<menu>
			<item
				android:id="@+id/wallet_options_export_keys"
				android:showAsAction="never"
				android:title="@string/export_keys_dialog_title"/>
			<item
				android:id="@+id/wallet_options_import_keys"
				android:showAsAction="never"
				android:title="@string/import_keys_dialog_title"/>
		</menu>
	</item>

    <item
        android:id="@+id/wallet_options_paper_wallet"
        android:showAsAction="never"
        android:title="@string/menu_paper_wallet_title"/>

    <item
		android:id="@+id/wallet_options_preferences"
		android:showAsAction="never"
		android:title="@string/preferences_activity_title"/>
	<item
		android:id="@+id/wallet_options_safety"
		android:showAsAction="never"
		android:title="@string/wallet_options_safety"/>

    <item
        android:id="@+id/wallet_options_empty_wallet"
        android:showAsAction="never"
        android:title="@string/send_coins_options_empty"/>


    <item
		android:id="@+id/wallet_options_about"
		android:showAsAction="never"
		android:title="@string/about_title"/>
	

</menu>