<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/dialog_transaction_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/currency_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.kncwallet.wallet.ui.CurrencyTextView
                android:id="@+id/currency_text_view_btc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#fff"/>

            <com.kncwallet.wallet.ui.CurrencyTextView
                android:id="@+id/currency_text_view_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#fff"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text_view_trail"
            android:layout_marginLeft="2dp"
            android:textSize="20sp"
            android:text="to Marcus"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_transaction_fee_info"
        android:id="@+id/textView"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_transaction_fee_acknowledge"
        android:id="@+id/checkBox"/>
</LinearLayout>