<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

    <LinearLayout
        android:paddingTop="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:orientation="vertical" >
	    
	    <include 
	        android:id="@+id/header" 
			layout="@layout/include_header"
			android:visibility="gone"
	    />
	    
	    <com.kncwallet.wallet.ui.CurrencyTextView
			android:id="@+id/wallet_balance_btc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginBottom="2dp"
			android:textSize="@dimen/font_size_wallet_balance_small"
			android:textColor="@color/knc_highlight"
		/>
	    
	    <com.kncwallet.wallet.ui.CurrencyTextView
			android:id="@+id/wallet_balance_local"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginBottom="2dp"
			android:textSize="@dimen/font_size_wallet_balance_small"
			android:textColor="@color/knc_highlight"
			android:visibility="gone" />
    </LinearLayout>

	<AutoCompleteTextView
	    android:id="@+id/send_coins_receiving_address"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="@dimen/list_entry_padding_horizontal"
	    android:layout_marginRight="@dimen/list_entry_padding_horizontal"
	    android:completionThreshold="1"
	    android:dropDownHeight="160dp"
	    android:hint="@string/send_coins_fragment_receiving_address_hint"
	    android:imeOptions="actionNext|flagNoExtractUi"
	    android:popupBackground="#0FFF"
	    android:singleLine="true"
	    android:textColor="@color/knc_highlight"
	    android:textSize="@dimen/font_size_normal" />

	<LinearLayout
		android:id="@+id/send_coins_receiving_static"
		style="@style/My.Widget.EditText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="12dp"
		android:layout_marginRight="12dp"
		android:orientation="vertical"
		android:visibility="gone" >

		<TextView
			android:id="@+id/send_coins_receiving_static_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/font_size_normal"
			android:textColor="@color/knc_highlight"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/send_coins_receiving_static_address"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/list_entry_padding_horizontal"
			android:textSize="@dimen/font_size_tiny" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/list_entry_padding_horizontal"
		android:layout_marginRight="@dimen/list_entry_padding_horizontal"
		android:divider="@drawable/divider_currency"
		android:orientation="horizontal"
		android:showDividers="middle" >

		<com.kncwallet.wallet.ui.CurrencyAmountView
			android:id="@+id/send_coins_amount_btc"
			android:layout_width="0px"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			 >
			

			<EditText
				android:id="@+id/send_coins_amount_btc_edittext"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:imeOptions="flagNoExtractUi"
				android:textSize="@dimen/font_size_large"
				android:textColor="@color/knc_header_text"
				tools:ignore="TextFields" />
		</com.kncwallet.wallet.ui.CurrencyAmountView>

		<com.kncwallet.wallet.ui.CurrencyAmountView
			android:id="@+id/send_coins_amount_local"
			android:layout_width="0px"
			android:layout_height="wrap_content"
			android:layout_weight="1" >

			<EditText
				android:id="@+id/send_coins_amount_local_edittext"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:imeOptions="flagNoExtractUi"
				android:textSize="@dimen/font_size_large"
				android:textColor="@color/knc_header_text"
				tools:ignore="TextFields" />
		</com.kncwallet.wallet.ui.CurrencyAmountView>
		
	</LinearLayout>
	<LinearLayout
   	    android:id="@+id/send_buttons"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/list_entry_padding_horizontal"
		android:layout_marginRight="@dimen/list_entry_padding_horizontal"
		android:layout_marginTop="12dp"
		android:layout_marginBottom="12dp"
		android:gravity="center"
		android:orientation="horizontal" >
		
		<Button
		    android:id="@+id/send_button_qr"
		    android:text="@string/send_button_qr_text"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="10"
		/>
		
		<Button
		    android:id="@+id/send_coins_go"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="10"
		    android:text="Send"
		/>
	</LinearLayout>

	<ListView 
    	    android:id="@+id/send_coins_contacts_list"
    	    android:layout_width="match_parent"
    	    android:background="@color/knc_background_darker"
    	    android:layout_height="0dp"
    	    android:layout_weight="200"
    	    >
    </ListView>
	
	<CheckBox
		android:id="@+id/send_coins_bluetooth_enable"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/list_entry_padding_horizontal"
		android:layout_marginRight="@dimen/list_entry_padding_horizontal"
		android:layout_marginTop="8dp"
		android:text="@string/send_coins_fragment_bluetooth_enable"
		android:textSize="@dimen/font_size_normal" />

	<!-- stretch dummy -->

	<ImageView
		android:layout_width="0px"
		android:layout_height="0px"
		android:layout_weight="1" />

	<TextView
		android:id="@+id/send_coins_bluetooth_message"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/list_entry_padding_vertical"
		android:layout_marginLeft="@dimen/list_entry_padding_horizontal"
		android:layout_marginRight="@dimen/list_entry_padding_horizontal"
		android:textSize="@dimen/font_size_normal"
		android:visibility="gone" />
	
	<ListView
		android:id="@+id/send_coins_sent_transaction"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone" />

</LinearLayout>